# react-native-quick-qrcode

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-quick-qrcode.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/quickqrcode/: QuickQrcodeModule.kt  QuickQrcodePackage.kt
cpp/: react-native-quick-qrcode.cpp  react-native-quick-qrcode.h
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx
ios/: QuickQrcode.h  QuickQrcode.mm
src/: NativeQuickQrcode.ts  index.tsx
